--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "easy-sitemap-generator",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Easy and free sitemap.xml file generator without any restrictions for your website.",
+  "keywords": [
+    "sitemap",
+    "sitemap-generator"
+  ],
   "homepage": "https://github.com/sefinek/easy-sitemap-generator#readme",
   "bugs": {
     "url": "https://github.com/sefinek/easy-sitemap-generator/issues"
@@ -12,25 +16,30 @@
   },
   "license": "MIT",
   "author": "Sefinek <contact@sefinek.net> (https://sefinek.net)",
+  "type": "commonjs",
   "main": "index.js",
-  "typings": "index.d.ts",
+  "types": "index.d.ts",
   "bin": {
-    "generate-sitemap": "./bin/cli.js",
-    "sitemap": "./bin/cli.js",
-    "sitemap-gen": "./bin/cli.js",
-    "sitemap-generator": "./bin/cli.js"
+    "generate-sitemap": "bin/cli.js",
+    "sitemap": "bin/cli.js",
+    "sitemap-gen": "bin/cli.js",
+    "sitemap-generator": "bin/cli.js"
+  },
+  "directories": {
+    "lib": "lib",
+    "example": "examples"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "up": "ncu -u && npm install && npm update && npm audit fix"
   },
   "dependencies": {
-    "axios": "^1.7.8",
-    "jsdom": "^25.0.1",
+    "axios": "^1.9.0",
+    "jsdom": "^26.1.0",
     "kleur": "^4.1.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "globals": "^15.12.0"
+    "@eslint/js": "^9.25.1",
+    "globals": "^16.0.0"
   }
 }
