--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "easy-sitemap-generator",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Easy and free sitemap.xml file generator without any restrictions for your website.",
   "keywords": [
     "sitemap",
-    "sitemap-generator"
+    "sitemap-generator",
+    "sitemap-xml",
+    "website"
   ],
   "homepage": "https://github.com/sefinek/easy-sitemap-generator#readme",
   "bugs": {
@@ -27,19 +29,29 @@
   },
   "directories": {
     "lib": "lib",
-    "example": "examples"
+    "example": "example"
   },
+  "files": [
+    "bin",
+    "example",
+    "lib",
+    "services",
+    "index.d.ts",
+    "index.js",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "up": "ncu -u && npm install && npm update && npm audit fix"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "jsdom": "^26.1.0",
+    "axios": "^1.13.2",
+    "jsdom": "^27.3.0",
     "kleur": "^4.1.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "globals": "^16.3.0"
+    "@eslint/js": "^9.39.1",
+    "globals": "^16.5.0"
   }
 }
